[tool.poetry]
name = "student-performance"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@proton.me>"]
readme = "README.md"
packages = [{include = "student_performance"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
